@@ -7,6 +7,7 @@ import com.cydeo.util.MapperUtil;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class RoleServiceImpl implements RoleService {
@@ -28,6 +29,6 @@ public class RoleServiceImpl implements RoleService {
     @Override
     public List<RoleDto> listAllRoles() {
         return roleRepository.findAll().stream()
-                .map(role -> mapperUtil.convert(role, new RoleDto())).toList();
+                .map(role -> mapperUtil.convert(role, new RoleDto())).collect(Collectors.toList());
     }
 }
